# zeldhash-parser

./: CHANGELOG.md  Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs  parser.rs  progress.rs  stores.rs
src/cli/: args.rs  duration.rs  protoblock.rs  rollblock.rs
src/config/: app.rs  overlay.rs  protoblock.rs  rollblock.rs
src/stores/: queries.rs  sqlite.rs  utxo.rs
