[package]
name = "mhinserver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.53", features = ["derive", "env"] }
directories = "5.0.1"
humantime = "2.1.0"
humantime-serde = "1.1.1"
protoblock = "0.1.3"
rollblock = "0.3.0"
mhinprotocol = "0.2.0"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
rand = "0.9.0"
