[package]
name = "mhinserver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
bitcoin = "0.32.7"
clap = { version = "4.5.53", features = ["derive", "env"] }
directories = "5.0.1"
humantime = "2.1.0"
humantime-serde = "1.1.1"
protoblock = "0.1.4"
rollblock = "0.3.1"
mhinprotocol = "0.2.0"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
rand = "0.9.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
